...
  @override
  String notesSelectedCount(int count) {
    return '$count selected';
  }

  @override
  String get notesHiddenTitle => 'Hidden Notes';

  @override
  String get notesNotFound => 'No notes found.';

  @override
  String get notesGraphTitle => 'Graph View';

  @override
  String get notesGraphEmpty => 'No notes available for graph.';

  @override
  String get notesMyTitle => 'My Notes';

  @override
  String get notesNew => 'New Note';

  @override
  String get notesEdit => 'Edit Note';
...
  String get notesUntitledNote => 'Untitled Note';

  @override
  String get notesPickColor => 'Pick a Color';

  @override
  String get settingsTitle => 'Settings';

  @override
  String get settingsMaterialYou => 'Use Material You';

  @override
  String get settingsMaterialYouSubtitle => 'Follow system dynamic colors';
...
